# jungleChallenge

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/articles/: models.py  urls.py
app/articles/migrations/: 0001_initial.py
app/authentication/: models.py  serializers.py  tests.py  urls.py  views.py
app/authentication/migrations/: 0001_initial.py
app/authors/: models.py  serializers.py  tests.py  urls.py  views.py
app/authors/migrations/: 0001_initial.py  0002_auto_20210807_1946.py
app/utils/: validator.py
